--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,1 +1,13 @@
-<h1> {{ message }} </h1>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    {% if title %}
+    <title> {{ title }} </title>
+    <title> Welcome to the best and reliable Headlines Scoop Website Online </title>
+    {% endif %}
+</head>
+<body>
+    
+</body>
+</html>
