--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -1,3 +1,4 @@
+{% extends 'bootstrap/base.html' %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -9,9 +10,13 @@
     {% endif %}
 </head>
 <body>
+    <!-- Navbar block -->
+    {% block navbar %}
+         {% include 'navbar.html' %}
+    {% endblock %}
     <!-- Content block -->
     {% block content %}
-
+    
     {% endblock %}
 </body>
 </html>
