--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -14,7 +14,7 @@
     {% block content %}
     <h2> Headlines </h2>
     <ul>
-             {{ macro.displayNewsList(headlines) }}
+             {{ macro.displayNewsList(articles) }}
     </ul>
     <h2> International News </h2>
     <ul>
