--- a/app/templates/navbar.html
+++ b/app/templates/navbar.html
@@ -12,6 +12,9 @@
         <div class="navbar-collapse collapse">
             <ul class="nav navbar-nav">
                 <li><a href="/"> Home </a></li>
+                <li><a href="/"> Business </a></li>
+                <li><a href="/"> Sports </a></li>
+                <li><a href="/"> International-News </a></li>
         </div>
 
     </div>
