--- a/app/templates/macros.html
+++ b/app/templates/macros.html
@@ -1,7 +1,14 @@
-{% macro displayNewsList(news_list) %}
+{% macro displaySourceList(source_list) %}
 
-   {% for news in news_list %}
-        <li>{{ news.title}}</li>
+   {% for source in source_list %}
+        <div class="col-xs-12 col-sm-4 col-md-2 col-lg-2 source-card">
+            <img src="{{ source.urlToImage }}" alt="{{ source.title }} poster" class="img-responsive">
+            <li class="text-center">
+                <a href="/source/{{ source.id }}">
+                    {{ source.title|truncate(10)}}
+                </a>
+            </li>
+        </div>
     {% endfor%}
 
 {% endmacro %}
