--- a/app/static/css/index.css
+++ b/app/static/css/index.css
@@ -1,4 +1,27 @@
-body{
-    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-    font-style: italic;
-}
+sidebar, .main{
+    transition: all .3s ease-out;
+    overflow-y: auto;
+    position: absolute;
+    top: 64px;
+    bottom: 0;
+  
+  }
+  
+  .sidebar{
+    width:25%;
+    overflow-wrap: break-word;
+  }
+  
+  .main{
+  background-color: #f5f5f5;
+  position: absolute;
+  width: 75%;
+  right: 0;
+  padding: 20px;
+  
+  }
+  
+  ul {
+      list-style-type: none;
+    
+  }
