--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,81 +1,76 @@
-{% extends 'base.html' %}
-{% import 'macros.html' as macro %}
+{% extends 'base.html'%}
+{% import 'macros.html' as macro%}
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    {% if title %}
-    <title> {{ title }} </title>
-    <title> Welcome to the best and reliable Headlines Scoop Website Online </title>
-    {% endif %}
-</head>
-<body>
-    <!-- Styles block -->
-    {% block styles%}
-    {{ super() }}
-    <link rel="stylesheet" href="{{url_for('static',filename='CSS/index.css')}}">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    {% endblock %}
-    <!--Content block -->
-    {% block content %}
-     <!-- Sources section  -->
-  <div class="container-fluid" id="wholebody">
-    <div class="row">
-        <div class="col-md-4" id="sources">
-            <h3 style="text-align: center;" id="gen" class="bg-dark text-white">General News</h3>
-            <ul class="text-center list-group">
+<html>
+    <head>
+        <meta charset="utf-8">
+
+    </head>
+    <body>
+        <!-- Styles block -->
+
+        {% block styles%}
+        {{ super() }}
+        <link rel="stylesheet" href="{{url_for('static',filename='css/index.css')}}">
+        {% endblock %}
+        <!-- Content block -->
+        {% block content %}
+        <!-- Sources section  -->
+        <aside class="sidebar">
+            <h3 class="bg-dark text-white">General News</h3>
+            <ul class="list-group">
              {{macro.displaySources(general)}}
             </ul>
-            <h3 style="text-align: center;" id="bus" class="bg-dark text-white">Business News</h3>
-            <ul class="text-center list-group">
+            <h3 class="bg-dark text-white">Business News</h3>
+            <ul class="list-group">
              {{macro.displaySources(business)}}
             </ul>
-            <h3 style="text-align: center;" id="sci" class="bg-dark text-white" >Science News</h3>
-            <ul class="text-center list-group">
+            <h3 class="bg-dark text-white">Science News</h3>
+            <ul class="list-group">
              {{macro.displaySources(science)}}
             </ul>
-            <h3 style="text-align: center;" id="health" class="bg-dark text-white">Health News</h3>
-            <ul class="text-center list-group">
+            <h3 class="bg-dark text-white">Health News</h3>
+            <ul class="list-group">
              {{macro.displaySources(health)}}
             </ul>
-            <h3 style="text-align: center;" id="tech" class="bg-dark text-white">Technology News</h3>
-            <ul class="text-center list-group">
+            <h3 class="bg-dark text-white">Technology News</h3>
+            <ul class="list-group">
              {{macro.displaySources(technology)}}
             </ul>
-            <h3 style="text-align: center;" id="enter" class="bg-dark text-white">Entertainment News</h3>
-            <ul class="text-center list-group">
+            <h3 class="bg-dark text-white">Entertainment News</h3>
+            <ul class="list-group">
              {{macro.displaySources(entertainment)}}
             </ul>
-            <h3 style="text-align: center;" id="sports" class="bg-dark text-white">Sports News</h3>
-            <ul class="text-center list-group">
+            <h3 class="bg-dark text-white">Sports News</h3>
+            <ul class="list-group">
              {{macro.displaySources(sports)}}
             </ul>
-        </div>
+          
+        </aside>
             
-        <div class=" container col-md-8" id="articles">
-          <h3 style="text-align: center;"> POPULAR NEWS </h3>
-          <hr>
-          <div style="display:flex; flex-wrap:wrap; ">
-            <!-- <div class="" id="articles" style=" margin-right:10px; height: 100%; width: 100%; display:flexbox;"> -->
-            {% for i in articles %}
-              <!-- <div class="col-md-3" style="margin-right: 20px; padding-right: 20px;"> -->
-                <div class=" card col-md-4  col-md-6 m-2 p-2" style="display:grid; flex-wrap:wrap; ">
-                    <img  src="{{i.image}}" class="card-img-top img-fluid" alt="" style="height:200px; width:300px;">
+          <section class="main">
+            <h3 class="text-center font-weight-bolder">TOP HEADLINES</h3>
+            <div class="d-flex flex-wrap justify-content-center">
+            {% for i in top %}
+
+                <div class="card col-lg-3 col-md-6 m-2 p-2" >
+                    <img src="{{i.image}}" class="card-img-top" alt="no image">
                     <div class="card-body">
-                        <h5 class="card-title font-weight-bold"> {{i.title}} </h5>
-                        <p class="card-text"> {{i.description}} </p>
-                        <p class="card-text font-italic"> Source : {{i.source}} </p>
-                        <a href="{{i.link}}" class="btn btn-primary" style=" bottom:10px;">Read more...</a>
-                    </div><br>
-                  </div>
-              <!-- </div><br> -->
+                    <h5 class="card-title font-weight-bold">{{i.title}}</h5>
+                    <p class="card-text">{{i.description}}</p>
+                    <p class="card-text font-italic">Source : {{i.source}}</p>
+                    <br>
+                    <a href="{{i.link}}" class="btn btn-primary" style="position: absolute;
+                    bottom: 10px;">Read more...</a>
+                    </div>
+                </div>
+            
+            
             {% endfor %}
-           </div>
-        </div>
-    
-    </div>
-  </div>
-  
-    {% endblock %}
-</body>
+           
+            </section>
+          
+
+        {% endblock %}
+ </body>
 </html>
