--- a/app/templates/macros.html
+++ b/app/templates/macros.html
@@ -1,14 +1,9 @@
-{% macro displaySourceList(source_list) %}
+{% macro displaySources(source_list) %}
 
-   {% for source in source_list %}
-        <div class="col-xs-12 col-sm-4 col-md-2 col-lg-2 source-card">
-            <img src="{{ source.urlToImage }}" alt="{{ source.title }} poster" class="img-responsive">
-            <li class="text-center">
-                <a href="/source/{{ source.id }}">
-                    {{ source.title|truncate(10)}}
-                </a>
-            </li>
-        </div>
-    {% endfor%}
+    {% for source in source_list %}
+    <a href="/article/{{source.id}}">
+    <li class="list-group-item list-group-item-action ">{{source.name}}
+    </li></a>
+    {% endfor %}
 
 {% endmacro %}
