--- a/app/static/css/index.css
+++ b/app/static/css/index.css
@@ -1,7 +1,7 @@
-sidebar, .main{
+.sidebar, .main{
     transition: all .3s ease-out;
     overflow-y: auto;
-    position: absolute;
+    position: fixed;
     top: 64px;
     bottom: 0;
   
@@ -13,15 +13,15 @@ sidebar, .main{
   }
   
   .main{
-  background-color: #f5f5f5;
-  position: absolute;
+  background-color:rgb(217,237,248);
+  position: fixed;
   width: 75%;
   right: 0;
   padding: 20px;
   
   }
   
-  ul {
+  /* ul {
       list-style-type: none;
     
-  }
+  } */
