--- a/app/templates/article.html
+++ b/app/templates/article.html
@@ -14,18 +14,44 @@
        {% endblock %}
         <!-- Content block -->
         {% block content %}
+
+        <div class="main">
+          <h3 class="text-center font-weight-bolder" >{{name}}</h3>
+          <div class="flex-wrap justify-content-center d-grid">
+            {%if article%}
+              {% for i in article %}
+  
+              <div class="card col-lg-3 col-md-6 " style="background-color:thistle; display: block; flex-wrap: wrap; margin-bottom: 20px; padding-bottom: 20px; margin-right: 20px; padding-right: 20px;">
+                  <img src="{{i.image}}" class="card-img-top" alt="no image" style="height: 220px; width: 310px;">
+                  <div class="card-body">
+                    <h5 class="card-title font-weight-bold">{{i.title}}</h5>
+                    <p class="card-text">{{i.description}}</p>
+                    <p class="card-text">Published on : {{i.publishDate}}</p><br>
+                    <a href="{{i.link}}" class="btn btn-info" >Details...</a>
+                  </div><br>
+              </div>
+              
+              {% endfor %}
+             {%else%} 
+             
+             <h3>Articles not found</h3>
+             {%endif%}
+          </div>
+        </div>
+
         <!-- Sources section  -->
+
         <aside class="sidebar">
-          <h3 class="bg-dark text-white">General News</h3>
+          <h3 class="bg-dark text-white">Science News</h3>
           <ul class="list-group">
-            {% for general in general %}     
-              {%if general.name == name%}
+            {% for science in science %}     
+              {%if science.name == name%}
                 <a href="/#">
-                <li class="list-group-item list-group-item-action list-group-item-info ">{{general.name}}
+                <li class="list-group-item list-group-item-action list-group-item-info">{{science.name}}
                 </li></a>
                 {%else%}
-                <a href="/article/{{general.id}}">
-                <li class="list-group-item list-group-item-action ">{{general.name}}
+                <a href="/article/{{science.id}}">
+                <li class="list-group-item list-group-item-action ">{{science.name}}
                 </li></a>
                 {% endif%}
            {%endfor%}
@@ -40,20 +66,6 @@
                 {%else%}
                 <a href="/article/{{business.id}}">
                 <li class="list-group-item list-group-item-action ">{{business.name}}
-                </li></a>
-                {% endif%}
-           {%endfor%}
-          </ul>
-          <h3 class="bg-dark text-white">Science News</h3>
-          <ul class="list-group">
-            {% for science in science %}     
-              {%if science.name == name%}
-                <a href="/#">
-                <li class="list-group-item list-group-item-action list-group-item-info">{{science.name}}
-                </li></a>
-                {%else%}
-                <a href="/article/{{science.id}}">
-                <li class="list-group-item list-group-item-action ">{{science.name}}
                 </li></a>
                 {% endif%}
            {%endfor%}
@@ -82,6 +94,20 @@
                 {%else%}
                 <a href="/article/{{technology.id}}">
                 <li class="list-group-item list-group-item-action ">{{technology.name}}
+                </li></a>
+                {% endif%}
+           {%endfor%}
+          </ul>
+          <h3 class="bg-dark text-white">General News</h3>
+          <ul class="list-group">
+            {% for general in general %}     
+              {%if general.name == name%}
+                <a href="/#">
+                <li class="list-group-item list-group-item-action list-group-item-info ">{{general.name}}
+                </li></a>
+                {%else%}
+                <a href="/article/{{general.id}}">
+                <li class="list-group-item list-group-item-action ">{{general.name}}
                 </li></a>
                 {% endif%}
            {%endfor%}
@@ -116,35 +142,6 @@
           </ul>
         
       </aside>
-
-      <section class="main">
-        <h3 class="text-center font-weight-bolder" >{{name}}</h3>
-        <div class="d-flex flex-wrap justify-content-center">
-          {%if article%}
-            {% for i in article %}
-
-            <div class="card col-lg-3 col-md-6 m-2 p-2" style="width: 18rem;">
-                <img src="{{i.image}}" class="card-img-top" alt="no image">
-                <div class="card-body">
-                  <h5 class="card-title font-weight-bold">{{i.title}}</h5>
-                  <p class="card-text">{{i.description}}</p>
-                  <p class="card-text">Published on : {{i.publishDate}}</p>
-                  <br>
-                  <a href="{{i.link}}" class="btn btn-primary" style="position: absolute;
-                  bottom: 10px;">Read more...</a>
-                </div>
-              </div>
-            
-            
-            {% endfor %}
-           {%else%} 
-           
-
-           <h3>Articles not found</h3>
-           {%endif%}
-        </div>
-        </section>
-
 
         {% endblock %}
  </body>
