--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -15,61 +15,59 @@
         {% endblock %}
         <!-- Content block -->
         {% block content %}
+
+        <div class="main">
+            <h3 class="text-center font-weight-bolder"> TRENDING NEWS </h3>
+            <div class="flex-wrap justify-content-center d-grid">
+            {% for i in top %}
+
+                <div class="card col-lg-3 col-md-6 " style="background-color:thistle; width: 42rem; display: block; flex-wrap: wrap; margin-bottom: 20px; padding-bottom: 20px; margin-right: 20px; padding-right: 20px;">
+                    <img src="{{i.image}} " class="card-img-top" alt="no image" style="height: 300px; width: 400px;">
+                    <div class="card-body">
+                    <h5 class="card-title font-weight-bold">{{i.title}}</h5>
+                    <p class="card-text">{{i.description}}</p>
+                    <p class="card-text font-italic">Source : {{i.source}}</p><br><br>
+                    <a href="{{i.link}}" class="btn btn-info"> Details... </a>
+                    </div><br>
+                </div>
+            
+            {% endfor %}
+            </div>
+        </div>
+        
         <!-- Sources section  -->
         <aside class="sidebar">
-            <h3 class="bg-dark text-white">General News</h3>
-            <ul class="list-group">
-             {{macro.displaySources(general)}}
-            </ul>
-            <h3 class="bg-dark text-white">Business News</h3>
-            <ul class="list-group">
-             {{macro.displaySources(business)}}
-            </ul>
-            <h3 class="bg-dark text-white">Science News</h3>
+            <h3 class="bg-dark text-white">Science </h3>
             <ul class="list-group">
              {{macro.displaySources(science)}}
             </ul>
-            <h3 class="bg-dark text-white">Health News</h3>
+            <h3 class="bg-dark text-white">Business </h3>
+            <ul class="list-group">
+             {{macro.displaySources(business)}}
+            </ul>
+            <h3 class="bg-dark text-white">Health </h3>
             <ul class="list-group">
              {{macro.displaySources(health)}}
             </ul>
-            <h3 class="bg-dark text-white">Technology News</h3>
+            <h3 class="bg-dark text-white">Technology </h3>
             <ul class="list-group">
              {{macro.displaySources(technology)}}
             </ul>
-            <h3 class="bg-dark text-white">Entertainment News</h3>
+            <h3 class="bg-dark text-white">General </h3>
+            <ul class="list-group">
+             {{macro.displaySources(general)}}
+            </ul>
+            <h3 class="bg-dark text-white">Entertainment </h3>
             <ul class="list-group">
              {{macro.displaySources(entertainment)}}
             </ul>
-            <h3 class="bg-dark text-white">Sports News</h3>
+            <h3 class="bg-dark text-white">Sports </h3>
             <ul class="list-group">
              {{macro.displaySources(sports)}}
             </ul>
           
         </aside>
             
-          <section class="main">
-            <h3 class="text-center font-weight-bolder">TOP HEADLINES</h3>
-            <div class="d-flex flex-wrap justify-content-center">
-            {% for i in top %}
-
-                <div class="card col-lg-3 col-md-6 m-2 p-2" >
-                    <img src="{{i.image}}" class="card-img-top" alt="no image">
-                    <div class="card-body">
-                    <h5 class="card-title font-weight-bold">{{i.title}}</h5>
-                    <p class="card-text">{{i.description}}</p>
-                    <p class="card-text font-italic">Source : {{i.source}}</p>
-                    <br>
-                    <a href="{{i.link}}" class="btn btn-primary" style="position: absolute;
-                    bottom: 10px;">Read more...</a>
-                    </div>
-                </div>
-            
-            
-            {% endfor %}
-           
-            </section>
-          
 
         {% endblock %}
  </body>
